[package]
name = "lux"
version = "0.5.3"
edition = "2021"
description = "A fast, multi-threaded Redis-compatible key-value store."
license = "MIT"
repository = "https://github.com/lux-db/lux"
keywords = ["redis", "key-value", "database", "cache"]
categories = ["database", "caching"]

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
parking_lot = "0.12"
hashbrown = "0.14"
ordered-float = "4"
mlua = { version = "0.10", features = ["lua54", "vendored"] }
sha1_smol = "1"
rmp = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
