[package]
name = "luxctl"
version = "0.1.1"
edition = "2021"
description = "CLI for Lux Cloud"
license = "MIT"
repository = "https://github.com/lux-db/lux"
homepage = "https://luxdb.dev"
keywords = ["lux", "redis", "cli", "database", "cloud"]

[[bin]]
name = "luxctl"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "6"
colored = "3"
open = "5"
